--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>P1: Build a Portfolio Site</title>
-  <!-- Not needed for codepen
-      <link rel="stylesheet" href="css/bootstrap.css">
-      <link rel="stylesheet" href="css/styles.css">-->
-  <!-- Latest compiled and minified CSS
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet'>
 </head>
 
