--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Insert Google Font -->
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet'>
   <!-- Insert JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
